--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,18 +10,19 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
+permissions:
+  contents: read
+  actions: write
+
 jobs:
-  test-check:
+  test:
     runs-on: ubuntu-24.04
-    if: github.event_name == 'workflow_dispatch' || github.event_name == 'push'
-    permissions:
-      contents: read
+    outputs:
+      test-workflow-id: ${{ steps.trigger-test.outputs.workflow-id }}
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-      with:
-        fetch-depth: 0 # Full history for version calculation
 
     - name: Trigger test workflow
       id: trigger-test
@@ -89,7 +90,7 @@ jobs:
 
   release:
     runs-on: ubuntu-24.04
-    needs: test-check
+    needs: test
 
     steps:
     - name: Checkout code
