--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,11 +29,15 @@ jobs:
       uses: actions/github-script@v7
       with:
         script: |
+          // For releases, trigger the test workflow on the main branch
+          // since the tests should run against the latest main branch code
+          const ref = 'main';
+
           const workflowResponse = await github.rest.actions.createWorkflowDispatch({
             owner: context.repo.owner,
             repo: context.repo.repo,
             workflow_id: 'test-on-merge.yml',
-            ref: context.sha,
+            ref: ref,
           });
 
           // Get the workflow run that was just triggered
