--- a/.github/workflows/test-on-merge.yml
+++ b/.github/workflows/test-on-merge.yml
@@ -8,8 +8,8 @@ on:
   workflow_dispatch: # Allow manual trigger
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
+  group: ${{ github.workflow }}-${{ github.ref }}-${{ github.event_name == 'workflow_dispatch' && 'release-triggered' || 'normal' }}
+  cancel-in-progress: ${{ github.event_name != 'workflow_dispatch' }}
 
 jobs:
   test:
