--- a/.github/actions/run-tests/action.yml
+++ b/.github/actions/run-tests/action.yml
@@ -1,6 +1,11 @@
 name: 'Run Tests'
 description: 'Runs the complete test suite for the quiz application'
 
+inputs:
+  tts-image:
+    description: 'TTS image for e2e tests'
+    required: false
+
 runs:
   using: 'composite'
   steps:
@@ -84,7 +89,7 @@ runs:
         # Set up test environment variables
         export SHELL=/bin/bash
         export SESSION_SECRET=test_session_secret_for_e2e
-        export TTS_IMAGE=${{ vars.TTS_IMAGE }}
+        export TTS_IMAGE=${{ inputs.tts-image }}
 
         # Run the complete test suite
         task test-e2e-api
