--- a/.github/workflows/test-on-merge.yml
+++ b/.github/workflows/test-on-merge.yml
@@ -38,6 +38,8 @@ jobs:
 
     - name: Run Tests
       uses: ./.github/actions/run-tests
+      with:
+        tts-image: ${{ vars.TTS_IMAGE }}
 
     - name: Upload test artifacts
       if: always()
