--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,6 +1,6 @@
 # syntax=docker/dockerfile:1.6
 # Stage 1: Font Generation Stage (cached separately)
-FROM node:22-alpine AS font-generator
+FROM --platform=$BUILDPLATFORM node:22-alpine AS font-generator
 
 WORKDIR /app
 
@@ -26,7 +26,7 @@ COPY frontend/tsconfig.node.json ./frontend/
 RUN python3 self_host_fonts.py
 
 # Stage 2: Dependencies (cached separately)
-FROM node:22-alpine AS deps
+FROM --platform=$BUILDPLATFORM node:22-alpine AS deps
 
 WORKDIR /app
 
@@ -38,7 +38,7 @@ RUN --mount=type=cache,id=quiz-frontend-npm,sharing=locked,target=/root/.npm \
     npm ci --no-audit --no-fund --prefer-offline --legacy-peer-deps
 
 # Stage 3: Build the React app
-FROM node:22-alpine AS builder
+FROM --platform=$BUILDPLATFORM node:22-alpine AS builder
 
 # Add build arguments for better caching
 ARG BUILDKIT_INLINE_CACHE=1
