--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -977,16 +977,30 @@ tasks:
           echo "Using existing Docker Buildx builder 'quiz-builder'..."
           docker buildx use quiz-builder
           if ! docker buildx inspect --bootstrap quiz-builder >/dev/null 2>&1; then
-            echo "Recreating builder without host networking due to bootstrap failure..."
+            echo "Recreating builder with optimized settings for cross-compilation..."
             docker buildx rm quiz-builder || true
-            docker buildx create --name quiz-builder --use --driver docker-container
+            docker buildx create --name quiz-builder --use --driver docker-container \
+              --driver-opt network=host \
+              --driver-opt "env.BUILDKIT_STEP_LOG_MAX_SIZE=10485760" \
+              --driver-opt "env.BUILDKIT_STEP_LOG_MAX_SPEED=1000000" \
+              --config /dev/stdin <<EOF
+        [registry."docker.io"]
+          mirrors = ["mirror.gcr.io"]
+        EOF
             docker buildx inspect --bootstrap quiz-builder
           else
             docker buildx inspect --bootstrap quiz-builder
           fi
         else
-          echo "Creating and using Docker Buildx builder 'quiz-builder'..."
-          docker buildx create --name quiz-builder --use --driver docker-container
+          echo "Creating and using optimized Docker Buildx builder 'quiz-builder'..."
+          docker buildx create --name quiz-builder --use --driver docker-container \
+            --driver-opt network=host \
+            --driver-opt "env.BUILDKIT_STEP_LOG_MAX_SIZE=10485760" \
+            --driver-opt "env.BUILDKIT_STEP_LOG_MAX_SPEED=1000000" \
+            --config /dev/stdin <<EOF
+        [registry."docker.io"]
+          mirrors = ["mirror.gcr.io"]
+        EOF
           docker buildx inspect --bootstrap quiz-builder
         fi
 
