--- a/Dockerfile.worker
+++ b/Dockerfile.worker
@@ -5,7 +5,7 @@ FROM --platform=$BUILDPLATFORM golang:1.25-alpine3.22 AS builder
 # Add build arguments for better caching
 ARG BUILDKIT_INLINE_CACHE=1
 ARG TARGETOS=linux
-ARG TARGETARCH=amd64
+ARG TARGETARCH
 ARG APP_VERSION=dev
 ARG COMMIT_HASH=dev
 ARG BUILD_TIME=unknown
