--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -91,7 +91,8 @@ tasks:
       - echo "Starting test database..."
       - docker compose -f ../docker-compose.test.yml up -d --wait postgres-test
       - echo "Running backend Go integration tests (sequential to avoid database races)..."
-      - go test -timeout 5m -tags=integration -p 1 -failfast ./...
+      # - go test -timeout 5m -tags=integration -p 1 -failfast ./...
+      - go test -timeout 5m -tags=integration -p 1 -json -failfast ./... | tee /tmp/output.json
 
   test-go-integration-single:
     desc: Run a single Go integration test by name (TEST_NAME=TestName)
